[gd_scene load_steps=8 format=2]

[ext_resource path="res://Dispenser.gd" type="Script" id=1]
[ext_resource path="res://Dispenser.png" type="Texture" id=2]
[ext_resource path="res://alien-hum.wav" type="AudioStream" id=3]
[ext_resource path="res://clang-ring.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 110.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.34902, 0.721569, 0.443137, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[node name="Dispenser" type="Node2D" groups=[
"dispenser",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )

[node name="HealingArea2D" type="Area2D" parent="." groups=[
"dispenser",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealingArea2D"]
visible = false
shape = SubResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -59.0
margin_top = -46.0
margin_right = 65.0
margin_bottom = -32.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 100.0
percent_visible = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 2.84

[node name="FixStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="HealingArea2D" to="." method="_on_HealingArea2D_body_entered"]
[connection signal="body_exited" from="HealingArea2D" to="." method="_on_HealingArea2D_body_exited"]
